--- a/helm/templates/storage-class.yaml
+++ b/helm/templates/storage-class.yaml
@@ -1,3 +1,5 @@
+{{- if .Values.storageclass.lvm.enabled }}
+---
 apiVersion: storage.k8s.io/v1
 kind: StorageClass
 metadata:
@@ -5,11 +7,15 @@ metadata:
 {{ include "local.labels" . | indent 2 }}
 provisioner: {{ .Values.driver }}
 parameters:
-  volumeType: "LVM"
-  csi.storage.k8s.io/fstype: ext4
-reclaimPolicy: Delete
-volumeBindingMode: WaitForFirstConsumer
-allowVolumeExpansion: true
+  {{- range $key, $value := .Values.storageclass.lvm.parameters }}
+  {{ $key }}: {{ $value }}
+  {{- end }}
+reclaimPolicy: {{ .Values.storageclass.lvm.reclaimPolicy }}
+volumeBindingMode: {{ .Values.storageclass.lvm.volumeBindingMode }}
+allowVolumeExpansion: {{ .Values.storageclass.lvm.allowVolumeExpansion }}
+{{- end }}
+
+{{- if .Values.storageclass.lvm_xfs.enabled }}
 ---
 apiVersion: storage.k8s.io/v1
 kind: StorageClass
@@ -18,11 +24,15 @@ metadata:
 {{ include "local.labels" . | indent 2 }}
 provisioner: {{ .Values.driver }}
 parameters:
-  volumeType: "LVM"
-  csi.storage.k8s.io/fstype: xfs
-reclaimPolicy: Delete
-volumeBindingMode: WaitForFirstConsumer
-allowVolumeExpansion: true
+  {{- range $key, $value := .Values.storageclass.lvm_xfs.parameters }}
+  {{ $key }}: {{ $value }}
+  {{- end }}
+reclaimPolicy: {{ .Values.storageclass.lvm_xfs.reclaimPolicy }}
+volumeBindingMode: {{ .Values.storageclass.lvm_xfs.volumeBindingMode }}
+allowVolumeExpansion: {{ .Values.storageclass.lvm_xfs.allowVolumeExpansion }}
+{{- end }}
+
+{{- if .Values.storageclass.device_hdd.enabled }}
 ---
 apiVersion: storage.k8s.io/v1
 kind: StorageClass
@@ -31,12 +41,15 @@ metadata:
 {{ include "local.labels" . | indent 2 }}
 provisioner: {{ .Values.driver }}
 parameters:
-  csi.storage.k8s.io/fstype: ext4
-  volumeType: Device
-  mediaType: hdd
-reclaimPolicy: Delete
-volumeBindingMode: WaitForFirstConsumer
-allowVolumeExpansion: false
+  {{- range $key, $value := .Values.storageclass.device_hdd.parameters }}
+  {{ $key }}: {{ $value }}
+  {{- end }}
+reclaimPolicy: {{ .Values.storageclass.device_hdd.reclaimPolicy }}
+volumeBindingMode: {{ .Values.storageclass.device_hdd.volumeBindingMode }}
+allowVolumeExpansion: {{ .Values.storageclass.device_hdd.allowVolumeExpansion }}
+{{- end }}
+
+{{- if .Values.storageclass.device_ssd.enabled }}
 ---
 apiVersion: storage.k8s.io/v1
 kind: StorageClass
@@ -45,12 +58,15 @@ metadata:
 {{ include "local.labels" . | indent 2 }}
 provisioner: {{ .Values.driver }}
 parameters:
-  csi.storage.k8s.io/fstype: ext4
-  volumeType: Device
-  mediaType: ssd
-reclaimPolicy: Delete
-volumeBindingMode: WaitForFirstConsumer
-allowVolumeExpansion: false
+  {{- range $key, $value := .Values.storageclass.device_ssd.parameters }}
+  {{ $key }}: {{ $value }}
+  {{- end }}
+reclaimPolicy: {{ .Values.storageclass.device_ssd.reclaimPolicy }}
+volumeBindingMode: {{ .Values.storageclass.device_ssd.volumeBindingMode }}
+allowVolumeExpansion: {{ .Values.storageclass.device_ssd.allowVolumeExpansion }}
+{{- end }}
+
+{{- if .Values.storageclass.lvm_throttle.enabled }}
 ---
 apiVersion: storage.k8s.io/v1
 kind: StorageClass
@@ -59,12 +75,15 @@ metadata:
 {{ include "local.labels" . | indent 2 }}
 provisioner: local.csi.aliyun.com
 parameters:
-  volumeType: "LVM"
-  bps: "1048576"
-  iops: "1024"
-reclaimPolicy: Delete
-volumeBindingMode: WaitForFirstConsumer
-allowVolumeExpansion: true
+  {{- range $key, $value := .Values.storageclass.lvm_throttle.parameters }}
+  {{ $key }}: {{ $value }}
+  {{- end }}
+reclaimPolicy: {{ .Values.storageclass.lvm_throttle.reclaimPolicy }}
+volumeBindingMode: {{ .Values.storageclass.lvm_throttle.volumeBindingMode }}
+allowVolumeExpansion: {{ .Values.storageclass.lvm_throttle.allowVolumeExpansion }}
+{{- end }}
+
+{{- if .Values.storageclass.lvm.enabled }}
 ---
 apiVersion: snapshot.storage.k8s.io/v1
 kind: VolumeSnapshotClass
@@ -78,3 +97,4 @@ parameters:
   csi.aliyun.com/snapshot-initial-size: 4Gi
   csi.aliyun.com/snapshot-expansion-size: 1Gi
   csi.aliyun.com/snapshot-expansion-threshold: 50%
+{{- end }}
