--- a/helm/templates/controller.yaml
+++ b/helm/templates/controller.yaml
@@ -30,7 +30,7 @@ spec:
         - name: TZ
           value: Asia/Shanghai
         image: {{ .Values.global.RegistryURL }}/{{ .Values.images.provisioner.image }}:{{ .Values.images.provisioner.tag }}
-        imagePullPolicy: Always
+        imagePullPolicy: {{ .Values.global.ImagePullPolicy }}
         resources:
           limits:
             cpu: 500m
@@ -50,7 +50,7 @@ spec:
         - name: TZ
           value: Asia/Shanghai
         image: {{ .Values.global.RegistryURL }}/{{ .Values.images.resizer.image }}:{{ .Values.images.resizer.tag }}
-        imagePullPolicy: Always
+        imagePullPolicy: {{ .Values.global.ImagePullPolicy }}
         resources:
           limits:
             cpu: 500m
@@ -71,7 +71,7 @@ spec:
         - name: TZ
           value: Asia/Shanghai
         image: {{ .Values.global.RegistryURL }}/{{ .Values.images.snapshotter.image }}:{{ .Values.images.snapshotter.tag }}
-        imagePullPolicy: Always
+        imagePullPolicy: {{ .Values.global.ImagePullPolicy }}
         resources:
           limits:
             cpu: 500m
@@ -114,7 +114,7 @@ spec:
           value: "{{ .Values.global.YodaSchedulerSvcIP }}"
 {{- end }}
         image: {{ .Values.global.RegistryURL }}/{{ .Values.images.local.image }}:{{ .Values.images.local.tag }}
-        imagePullPolicy: Always
+        imagePullPolicy: {{ .Values.global.ImagePullPolicy }}
         resources:
           limits:
             cpu: 500m
@@ -132,7 +132,7 @@ spec:
         - --initconfig={{ .Values.name }}
         - --feature-gates=UpdateNLS={{ .Values.controller.update_nls }}
         image: {{ .Values.global.RegistryURL }}/{{ .Values.images.local.image }}:{{ .Values.images.local.tag }}
-        imagePullPolicy: Always
+        imagePullPolicy: {{ .Values.global.ImagePullPolicy }}
         resources:
           limits:
             cpu: 200m
@@ -148,7 +148,7 @@ spec:
         env:
           - name: TZ
             value: Asia/Shanghai
-        imagePullPolicy: Always
+        imagePullPolicy: {{ .Values.global.ImagePullPolicy }}
         resources:
           limits:
             cpu: 500m
