--- a/helm/values.yaml
+++ b/helm/values.yaml
@@ -61,3 +61,4 @@ monitor:
   namespace: monitoring
 global:
   RegistryURL: ack-agility-registry.cn-shanghai.cr.aliyuncs.com
+  ImagePullPolicy: Always
