docker buildx support

--- a/Dockerfile.arm64
+++ b/Dockerfile.arm64
@@ -1,13 +1,12 @@
 FROM --platform=linux/arm64 golang:1.18 AS builder
 
-WORKDIR /go/src/github.com/alibaba/open-local
+WORKDIR /go/src/github.com/apecloud/open-local
 COPY . .
-RUN make build && chmod +x bin/open-local
+RUN /bin/sh -c 'make build && chmod +x bin/open-local'
 
 FROM alpine:3.9@sha256:f920ccc826134587fffcf1ddc6b2a554947e0f1a5ae5264bbf3435da5b2e8e61
 LABEL maintainers="Alibaba Cloud Authors"
 LABEL description="open-local is a local disk management system"
 RUN apk update && apk upgrade && apk add util-linux coreutils e2fsprogs e2fsprogs-extra xfsprogs xfsprogs-extra blkid file open-iscsi jq
 COPY --from=builder /go/src/github.com/alibaba/open-local/bin/open-local /bin/open-local
-COPY --from=thebeatles1994/open-local:tools /usr/local/bin/restic-arm64 /usr/local/bin/restic
 ENTRYPOINT ["open-local"]
