--- a/helm/templates/controller.yaml
+++ b/helm/templates/controller.yaml
@@ -113,7 +113,7 @@ spec:
         - name: EXTENDER_SVC_IP
           value: "{{ .Values.global.YodaSchedulerSvcIP }}"
 {{- end }}
-        image: {{ .Values.global.RegistryURL }}/{{ .Values.images.local.image }}:{{ .Values.images.local.tag }}
+        image: {{ .Values.global.DockerRegistryURL }}/{{ .Values.images.local.image }}:{{ .Values.images.local.tag }}
         imagePullPolicy: {{ .Values.global.ImagePullPolicy }}
         resources:
           limits:
@@ -131,7 +131,7 @@ spec:
         - controller
         - --initconfig={{ .Values.name }}
         - --feature-gates=UpdateNLS={{ .Values.controller.update_nls }}
-        image: {{ .Values.global.RegistryURL }}/{{ .Values.images.local.image }}:{{ .Values.images.local.tag }}
+        image: {{ .Values.global.DockerRegistryURL }}/{{ .Values.images.local.image }}:{{ .Values.images.local.tag }}
         imagePullPolicy: {{ .Values.global.ImagePullPolicy }}
         resources:
           limits:
