--- a/helm/templates/init-job.yaml
+++ b/helm/templates/init-job.yaml
@@ -40,7 +40,7 @@ spec:
             topologyKey: "kubernetes.io/hostname"
       containers:
       - name: init
-        image: {{ .Values.global.RegistryURL }}/{{ .Values.images.local.image }}:{{ .Values.images.local.tag }}
+        image: {{ .Values.global.DockerRegistryURL }}/{{ .Values.images.local.image }}:{{ .Values.images.local.tag }}
         imagePullPolicy: {{ .Values.global.ImagePullPolicy }}
         command:
         - sh
