--- a/helm/templates/agent.yaml
+++ b/helm/templates/agent.yaml
@@ -143,6 +143,8 @@ spec:
           value: "true"
         - name: ISSUE_MESSAGE_FILE
           value: "true"
+        - name: MAX_VOLUMES_PERNODE
+          value: "{{ .Values.agent.max_volumes_pre_node }}"
 {{- if .Values.global.YodaSchedulerSvcIP }}
         - name: EXTENDER_SVC_IP
           value: "{{ .Values.global.YodaSchedulerSvcIP }}"
