--- a/helm/values-acka.yaml
+++ b/helm/values-acka.yaml
@@ -27,7 +27,7 @@ agent:
   volume_name_prefix: yoda
   spdk: false
   driverMode: node
-  max_volumes_pre_node: 256
+  max_volumes_per_node: 256
 extender:
   name: yoda-scheduler-extender
   # scheduling strategy: binpack/spread
