--- a/Dockerfile.arm64
+++ b/Dockerfile.arm64
@@ -4,10 +4,9 @@ WORKDIR /go/src/github.com/alibaba/open-local
 COPY . .
 RUN make build && chmod +x bin/open-local
 
-FROM alpine:3.9@sha256:f920ccc826134587fffcf1ddc6b2a554947e0f1a5ae5264bbf3435da5b2e8e61
+FROM --platform=linux/arm64 openlocal/open-local-base:latest
 LABEL maintainers="Alibaba Cloud Authors"
 LABEL description="open-local is a local disk management system"
-RUN apk update && apk upgrade && apk add util-linux coreutils e2fsprogs e2fsprogs-extra xfsprogs xfsprogs-extra blkid file open-iscsi jq
 COPY --from=builder /go/src/github.com/alibaba/open-local/bin/open-local /bin/open-local
-COPY --from=thebeatles1994/open-local:tools /usr/local/bin/restic-arm64 /usr/local/bin/restic
+COPY --from=openlocal/open-local-tools:latest /usr/local/bin/restic-arm64 /usr/local/bin/restic
 ENTRYPOINT ["open-local"]
