--- a/helm/Chart.yaml
+++ b/helm/Chart.yaml
@@ -1,5 +1,5 @@
 apiVersion: v1
 description: cloud-native local storage management system
 name: open-local
-version: v0.7.1
-appVersion: v0.7.1
+version: v0.8.0-alpha
+appVersion: v0.8.0-alpha
