--- a/.github/workflows/build-release.yml
+++ b/.github/workflows/build-release.yml
@@ -33,6 +33,11 @@ jobs:
       - 
         name: Checkout
         uses: actions/checkout@v3
+     - 
+        name: Set up Go
+        uses: actions/setup-go@v2.1.4
+        with:
+          go-version: 1.18
       -
         name: Set up QEMU
         uses: docker/setup-qemu-action@v2 
